--- a/web-app/tds/web-app/css/shared/components/password-change.component.sass
+++ b/web-app/tds/web-app/css/shared/components/password-change.component.sass
@@ -4,6 +4,6 @@
   .passwordRequirementGroup
     font-weight: bold
   .passRequirement
-    color: green
+    color: rgb(0, 170, 0)
   .failRequirement
-    color: red
+    color: rgb(204, 0, 0)
