TM-12269 Created endpoint to save the preference for datetime and timezone

--- a/web-app/tds/web-app/app-js/modules/user/components/date-timezone/user-date-timezone.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/date-timezone/user-date-timezone.component.html
@@ -49,7 +49,7 @@
         </form>
 
         <div class="modal-footer form-group-center">
-            <button type="button" (click)="onSaveApiAction()" class="btn btn-primary pull-left">
+            <button type="button" (click)="onSave()" class="btn btn-primary pull-left">
                 <span class="fa fa-fw fa-floppy-o"></span> Save
             </button>
             <button (click)="cancelCloseDialog()" type="button" class="btn btn-default pull-right">
