TM-12169 Change the tags field names according the endpoint results

--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -1,6 +1,7 @@
 .dependencies-view-grid-component
   .dependency-tag
     display: inline-block
+    margin: 2px
     width: unset
 
   .asset-tag-selector-component
