--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -127,6 +127,7 @@
                                     <!-- Asset Tag Fields -->
                                     <tds-asset-tag-selector *ngIf="canShowControl('asset-tag-selector', rowIndex)"
                                                             [tagList]="tagList"
+                                                            [showSwitch]="false"
                                                             (valueChange)="onTagFilterChange(column,rowIndex, $event)">
                                     </tds-asset-tag-selector>
 
