TM-12169 Remove dependency to Asset Explorer Module

--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -10,6 +10,7 @@
       position: unset
       float: unset
       top: 0
+      right: 0
     .k-multiselect-wrap
       border: 0
   .bulkchange-section
