--- a/web-app/tds/web-app/css/page/module/user/datetime-modal.component.sass
+++ b/web-app/tds/web-app/css/page/module/user/datetime-modal.component.sass
@@ -1,5 +1,7 @@
 .datetime-modal-component
   .modal-body
     padding: 6px 18px 1px 18px !important
+    .timezone-pin-hidden
+      display: none !important
   .modal-header
     cursor: move
