--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/dialog/task-comment-dialog.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/task-comment/dialog/task-comment-dialog.component.html
@@ -1,4 +1,4 @@
-<div tds-handle-escape (escPressed)="cancelCloseDialog()" class="task-comment-dialog-component modal-content " id="task-comment-dialog-component">
+<div tds-autofocus tds-handle-escape (escPressed)="cancelCloseDialog()" class="task-comment-dialog-component modal-content " id="task-comment-dialog-component">
     <div class="modal-header">
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close">
             <span aria-hidden="true">×</span>
