TM-13508 Add drill asset capabilities to dependencies view

--- a/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
+++ b/web-app/tds/web-app/css/page/module/dependencies/dependencies-view-grid-component.sass
@@ -1,4 +1,7 @@
 .dependencies-view-grid-component
+  .actionable-column
+    font-weight: bold
+    cursor: pointer
   .dependency-tag
     display: inline-block
     margin: 2px
