--- a/web-app/tds/web-app/app-js/modules/dependencies/components/view-grid/dependencies-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/dependencies/components/view-grid/dependencies-view-grid.component.html
@@ -8,6 +8,7 @@
 	            [resizable]="true"
 	            [pageable]="{'pageSizes': GRID_PAGE_SIZES, 'info': true}"
 	            (dataStateChange)="dataStateChange($event)"
+	            (cellClick)="onClickActionableColumn($event)"
 	            class="tds-kendo-grid without-selectabe-rows">
 
 		<!-- Header Toolbar -->
@@ -95,6 +96,16 @@
 				   </span>
 				</div>
 			</ng-template>
+
+			<!-- Actionable assets Cell Template -->
+			<ng-template kendoGridCellTemplate let-dataItem
+			             *ngIf="actionableAssets.includes(column.property)">
+				<div class="actionable-column">
+					{{dataItem[column.property]}}
+				</div>
+			</ng-template>
+
+
 
 		</kendo-grid-column>
 
