TM-13370 Change tab format

--- a/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-edit/bulk-change-edit.component.html
@@ -87,8 +87,10 @@
                                     </tds-number-control>
 
                                     <!-- Date Fields -->
-                                    <tds-date-control *ngIf="canShowControl('Date', rowIndex)"
-                                                       [(value)]="editRows.selectedValues[rowIndex].value"></tds-date-control>
+                                    <tds-date-control
+										*ngIf="canShowControl('Date', rowIndex)"
+                                        [(value)]="editRows.selectedValues[rowIndex].value">
+									</tds-date-control>
 
                                     <!-- Datetime Fields -->
                                     <tds-datetime-control *ngIf="canShowControl('DateTime', rowIndex)"
