TM-12169 Fix issue pluralizing the dependency title

--- a/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-actions/bulk-change-actions.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/bulk-change/components/bulk-change-actions/bulk-change-actions.component.html
@@ -18,7 +18,7 @@
 									</div>
 
 									<div class="form-group" *ngIf="bulkChangeAction === ACTION_TYPE.Dependencies">
-										{{'ASSET_EXPLORER.BULK_CHANGE.EDIT.EFFECTED_DEPENDENCIES' | translate:[affected]}}
+										{{'ASSET_EXPLORER.BULK_CHANGE.EDIT.EFFECTED_DEPENDENCIES' | translate:[affected, getSinglePluralDependenceName()]}}
 									</div>
 								</div>
 								<div class="col-md-12">
