--- a/web-app/tds/web-app/app-js/modules/dependencies/components/view-grid/dependencies-view-grid.component.html
+++ b/web-app/tds/web-app/app-js/modules/dependencies/components/view-grid/dependencies-view-grid.component.html
@@ -23,8 +23,8 @@
 				                        (operationResult)="onBulkOperationResult($event)">
 				</tds-bulk-change-button>
 
-				<div *ngIf="bulkCheckboxService.hasSelectedItems()" class="bulk-change-counter">
-					<span class="badge badge-light">{{getSelectedItemsCount()}}</span><label>Dependency(s) selected</label>
+				<div *ngIf="getSelectedItemsCount(); let counter"  class="bulk-change-counter">
+					<span class="badge badge-light">{{counter.count}}</span><label>{{counter.entityName}} selected</label>
 				</div>
 			</div>
 			<div class="col-sm-6 filters-section"></div>
