TM-12643 - Backend work, getting persistance and data in proper format, and style changes

--- a/web-app/tds/web-app/app-js/modules/user/components/manage-staff/user-manage-staff.component.html
+++ b/web-app/tds/web-app/app-js/modules/user/components/manage-staff/user-manage-staff.component.html
@@ -3,131 +3,197 @@
         <button (click)="cancelCloseDialog()" type="button" class="close" aria-label="Close"><span aria-hidden="true">×</span></button>
         <h4 class="modal-title">Manage Staff</h4>
     </div>
-    <div class="menu4">
-        <ul>
-            <li>
-                <a id="generalShowHeadId" (click)="currentTab='person'" class="mobmenu mobselect">Person/Contact</a>
-            </li>
-            <li>
-                <a id="availShowHeadId" (click)="currentTab='availability'" class="mobmenu">Availability</a>
-            </li>
-            <li>
-                <a id="tdsShowHeadId" (click)="currentTab='misc'" class="mobmenu">Misc</a>
-            </li>
-        </ul>
-    </div>
-    <div *ngIf="currentTab=='person'" id="generalInfoShowId" class="person" >
-        <form name="personDialogForm">
-            <div class="dialog">
-                <div>
-                    <table class="personTable">
-                        <tbody>
-
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Company:</span></td>
-                            <td valign="top" class="value" colspan="2">
-                                <span class="personShow" id="companyId" name="company">{{personModel.company}}</span>
-                            </td>
-                        </tr>
-
-                        <tr class="prop">
-                            <td valign="top" class="name">
-                                <span>First Name:&nbsp;</span>
-                            </td>
-                            <td valign="top" class="value" style="width: 40px">
-                                <span *ngIf="!editing" class="personShow" id="firstNameId" class="asset_details_block_task">{{personModel.firstName}}</span>
-                                <input *ngIf="editing" name="firstName" [(ngModel)]="personModel.firstName"/>
-                            </td>
-                        </tr>
-
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Middle Name:</span></td>
-                            <td valign="top" class="value" colspan="2" width="50%">
-                                <span *ngIf="!editing" class="personShow" id="middleNameId">{{personModel.middleName}}</span>
-                                <input *ngIf="editing" name="middleName" [(ngModel)]="personModel.middleName"/>
-                            </td>
-                        </tr>
-
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Last Name:</span></td>
-                            <td valign="top" class="value" colspan="2" width="50%">
-                                <span *ngIf="!editing" class="personShow" id="lastNameId">{{personModel.lastName}}</span>
-                                <input *ngIf="editing" name="lastName" [(ngModel)]="personModel.lastName"/>
-                            </td>
-                        </tr>
-
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Title:</span></td>
-                            <td valign="top" class="value" colspan="2">
-                                <span *ngIf="!editing" class="personShow" id="titleId">{{personModel.title}}</span>
-                                <input *ngIf="editing" name="title" [(ngModel)]="personModel.title"/>
-                            </td>
-                        </tr>
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Email:</span></td>
-                            <td valign="top" class="value" colspan="2">
-                                <span *ngIf="!editing" class="personShow" id="emailId">{{personModel.email}}</span>
-                                <input *ngIf="editing" name="email" [(ngModel)]="personModel.email"/>
-                            </td>
-                        </tr>
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Work Phone:</span></td>
-                            <td valign="top" class="value" colspan="2">
-                                <span *ngIf="!editing" class="personShow" id="workPhoneId">{{personModel.workPhone}}</span>
-                                <input *ngIf="editing" name="workPhone" [(ngModel)]="personModel.workPhone"/>
-                            </td>
-                        </tr>
-
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Mobile Phone:</span></td>
-                            <td valign="top" class="value" colspan="2">
-                                <span *ngIf="!editing" class="personShow" id="mobilePhoneId">{{personModel.mobilePhone}}</span>
-                                <input *ngIf="editing" name="mobilePhone" [(ngModel)]="personModel.mobilePhone"/>
-                            </td>
-                        </tr>
-
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>City/State/Zip:</span></td>
-                            <td valign="top" class="value" colspan="2">
-                                <span *ngIf="!editing" class="personShow" id="locationId">{{personModel.location}}</span>
-                                <input *ngIf="editing" name="location" [(ngModel)]="personModel.location"/>
-                            </td>
-                        </tr>
-
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Active:</span></td>
-                            <td valign="top" class="value" colspan="2">
-                                <span *ngIf="!editing" class="personShow" id="activeId">{{personModel.active}}</span>
-                                <input *ngIf="editing" name="active" [(ngModel)]="personModel.active"/>
-                            </td>
-                        </tr>
-
-                        <tr class="prop">
-                            <td valign="top" class="name"><span>Team :</span></td>
-                            <td valign="top" class="value" colspan="2">
-                                <table style="border: 0px">
-                                    <tbody id="funcsTbodyId">
-                                        <tr id="team">
-                                            <td *ngFor="let team of personModel.teams">
-                                                <span class="personShow">
-                                                    {{team}}
-                                                </span>
-                                                <br />
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </td>
-                        </tr>
-                        </tbody>
-
-                    </table>
-                </div>
+    <div class="modal-body">
+        <div class="menu4">
+            <div class="menuTab">
+                <span id="generalShowHeadId" (click)="currentTab='person'" class="mobmenu mobselect">Person/Contact</span>
             </div>
-        </form>
-    </div>
-    <div class="footer_buttons">
-        <button class="btn btn-default" role="button" (click)="editing = !editing"><span class="glyphicon glyphicon-pencil"></span> Edit</button>
-        <button class="btn btn-default" role="button"><span class="glyphicon glyphicon-ban-circle"></span> Cancel</button>
+            <div class="menuTab">
+                <span id="availShowHeadId" (click)="currentTab='availability'" class="mobmenu">Availability</span>
+            </div>
+            <div class="menuTab">
+                <span id="tdsShowHeadId" (click)="currentTab='misc'" class="mobmenu">Misc</span>
+            </div>
+        </div>
+        <div *ngIf="currentTab=='person'" id="generalInfoShowId" class="person" >
+            <form name="personDialogForm">
+                <div class="dialog">
+                    <div>
+                        <table class="personTable">
+                            <tbody>
+
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Company:</span></td>
+                                <td valign="top" class="value" colspan="2">
+                                    <span class="personShow" id="companyId" name="company">{{personModel.company}}</span>
+                                </td>
+                            </tr>
+
+                            <tr class="prop">
+                                <td valign="top" class="name">
+                                    <span>First Name:&nbsp;</span>
+                                </td>
+                                <td valign="top" class="value" style="width: 40px">
+                                    <span *ngIf="!editing" class="personShow" id="firstNameId" class="asset_details_block_task">{{personModel.firstName}}</span>
+                                    <input *ngIf="editing" name="firstName" [(ngModel)]="personModel.firstName"/>
+                                </td>
+                            </tr>
+
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Middle Name:</span></td>
+                                <td valign="top" class="value" colspan="2" width="50%">
+                                    <span *ngIf="!editing" class="personShow" id="middleNameId">{{personModel.middleName}}</span>
+                                    <input *ngIf="editing" name="middleName" [(ngModel)]="personModel.middleName"/>
+                                </td>
+                            </tr>
+
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Last Name:</span></td>
+                                <td valign="top" class="value" colspan="2" width="50%">
+                                    <span *ngIf="!editing" class="personShow" id="lastNameId">{{personModel.lastName}}</span>
+                                    <input *ngIf="editing" name="lastName" [(ngModel)]="personModel.lastName"/>
+                                </td>
+                            </tr>
+
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Title:</span></td>
+                                <td valign="top" class="value" colspan="2">
+                                    <span *ngIf="!editing" class="personShow" id="titleId">{{personModel.title}}</span>
+                                    <input *ngIf="editing" name="title" [(ngModel)]="personModel.title"/>
+                                </td>
+                            </tr>
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Email:</span></td>
+                                <td valign="top" class="value" colspan="2">
+                                    <span *ngIf="!editing" class="personShow" id="emailId">{{personModel.email}}</span>
+                                    <input *ngIf="editing" name="email" [(ngModel)]="personModel.email"/>
+                                </td>
+                            </tr>
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Work Phone:</span></td>
+                                <td valign="top" class="value" colspan="2">
+                                    <span *ngIf="!editing" class="personShow" id="workPhoneId">{{personModel.workPhone}}</span>
+                                    <input *ngIf="editing" name="workPhone" [(ngModel)]="personModel.workPhone"/>
+                                </td>
+                            </tr>
+
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Mobile Phone:</span></td>
+                                <td valign="top" class="value" colspan="2">
+                                    <span *ngIf="!editing" class="personShow" id="mobilePhoneId">{{personModel.mobilePhone}}</span>
+                                    <input *ngIf="editing" name="mobilePhone" [(ngModel)]="personModel.mobilePhone"/>
+                                </td>
+                            </tr>
+
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>City/State/Zip:</span></td>
+                                <td valign="top" class="value" colspan="2">
+                                    <span *ngIf="!editing" class="personShow" id="locationId">{{personModel.location + " " + personModel.stateProv + " " + personModel.country}}</span>
+                                    <div *ngIf="editing"><input style="width:100px" name="location" [(ngModel)]="personModel.location"/><input style="width:25px" name="stateProv" [(ngModel)]="personModel.stateProv"/><input style="width:40px" name="country" [(ngModel)]="personModel.country"/></div>
+                                </td>
+                            </tr>
+
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Active:</span></td>
+                                <td valign="top" class="value" colspan="2">
+                                    <span *ngIf="!editing" class="personShow" id="activeId">{{personModel.active}}</span>
+                                    <kendo-dropdownlist
+                                            *ngIf="editing"
+                                            name="active"
+                                            [(ngModel)]="personModel.active"
+                                            [data]="['Y','N']">
+                                    </kendo-dropdownlist>
+                                </td>
+                            </tr>
+
+                            <tr class="prop">
+                                <td valign="top" class="name"><span>Team :</span></td>
+                                <td valign="top" class="value" colspan="2">
+                                    <table style="border: 0px">
+                                        <tbody id="funcsTbodyId">
+                                            <tr id="team">
+                                                <td>
+                                                    <div  *ngFor="let team of personModel.teams">
+                                                        <span *ngIf="!editing" class="personShow">
+                                                            {{team.description}}
+                                                        </span>
+                                                        <div *ngIf="editing">
+                                                            <kendo-dropdownlist
+                                                                    name="{{team.description}}"
+                                                                    (ngModelChange)="updateTeamEntry(team, $event)"
+                                                                    [(ngModel)]="team.description"
+                                                                    [data]="availableTeamNames">
+                                                            </kendo-dropdownlist>
+                                                            <span class="clickable" (click)="removeTeam(team.description)">X</span>
+                                                        </div>
+                                                    </div>
+                                                    <span *ngIf="editing" class="clickable" (click)="addTeam()">Add team</span>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </form>
+        </div>
+        <div *ngIf="currentTab=='availability'">
+            <span>Available, except for the following dates</span>
+            <a *ngIf="editing">Add Date</a>
+        </div>
+        <div *ngIf="currentTab=='misc'">
+            <table>
+                <tr class="prop">
+                    <td valign="top" class="name"><span>Keywords:</span></td>
+                    <td valign="top" class="value" colspan="2">
+                        <span *ngIf="!editing" class="personShow" id="keywordsId">{{personModel.keyWords}}</span>
+                        <input *ngIf="editing" name="keywords" [(ngModel)]="personModel.keyWords"/>
+                    </td>
+                </tr>
+                <tr class="prop">
+                    <td valign="top" class="name"><span>Comments:</span></td>
+                    <td valign="top" class="value" colspan="2">
+                        <span *ngIf="!editing" class="personShow" id="commentsId">{{personModel.tdsNote}}</span>
+                        <input *ngIf="editing" name="comments" [(ngModel)]="personModel.tdsNote"/>
+                    </td>
+                </tr>
+                <tr class="prop">
+                    <td valign="top" class="name"><span>Contact URL:</span></td>
+                    <td valign="top" class="value" colspan="2">
+                        <span *ngIf="!editing" class="personShow" id="urlId">{{personModel.tdsLink}}</span>
+                        <input *ngIf="editing" name="url" [(ngModel)]="personModel.tdsLink"/>
+                    </td>
+                </tr>
+                <tr class="prop">
+                    <td valign="top" class="name"><span>Staff Type:</span></td>
+                    <td valign="top" class="value" colspan="2">
+                        <span *ngIf="!editing" class="personShow" id="staffTypeId">{{personModel.staffType}}</span>
+                        <kendo-dropdownlist
+                                *ngIf="editing"
+                                name="staffType"
+                                [(ngModel)]="personModel.staffType"
+                                [data]="['Contractor','Hourly','Salary']">
+                        </kendo-dropdownlist>
+                    </td>
+                </tr>
+                <tr class="prop">
+                    <td valign="top" class="name"><span>Can Travel:</span></td>
+                    <td valign="top" class="value" colspan="2">
+                        <input type="checkbox" [disabled]="!editing" name="canTravel" [(ngModel)]="personModel.travelOK"/>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div class="footer_buttons">
+            <button *ngIf="!editing" class="btn btn-default" role="button" (click)="submitPreferences()"><span class="glyphicon glyphicon-pencil"></span> Edit</button>
+            <button *ngIf="editing" (click)="submitPreferences()" type="button" class="btn btn-primary pull-left">
+                <span class="fa fa-fw fa-floppy-o"></span>
+                <span>Update</span>
+            </button>
+            <button (click)="handleCancelButton()" class="btn btn-default" role="button"><span class="glyphicon glyphicon-ban-circle"></span> Cancel</button>
+        </div>
     </div>
 </div>
