--- a/web-app/tds/web-app/css/page/index.sass
+++ b/web-app/tds/web-app/css/page/index.sass
@@ -34,3 +34,4 @@
 @import "module/user/user-preferences.component"
 @import "module/user/user-edit-person.component"
 @import "module/user/datetime-modal.component"
+@import "module/user/user-manage-staff.component"
