TM-13526 Fix issue on button id
It was breaking QA tests

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/view-show/asset-explorer-view-show.component.html
@@ -57,7 +57,7 @@
                     icon="download"
                     class="btn btn-default"
                     (click)="onExport()"
-                    [attr.id]="getSaveButtonId()">Export</button>
+                    id="btnExport">Export</button>
             <asset-explorer-view-selector
                     #select="assetExplorerViewSelector">
             </asset-explorer-view-selector>
